# armbot

./: .gitignore  README.md
archive/: Jenkinsfile
archive/brain/: README.md
archive/brain/src/: link.h  main.c  sensors.c  sensors.h  util.h
archive/sensors/: README.md
archive/sensors/Servo_Test/: Servo_Test.ino.with_bootloader.standard.hex
armbot/: armbot.cpp  armbot.h  armbot.ino  elbow.cpp  elbow.h  finger.cpp  finger.h  servomgr.cpp  servomgr.h  util.cpp  util.h  wrist.cpp  wrist.h
brain/: CMakeLists.txt
brain/src/: link.c  link.h  main.c  sensors.c  sensors.h  util.c  util.h
sensors/Servo_Test/: Servo_Test.ino  Servo_Test.ino.standard.hex
sensors/sensors/: Servo_Test.ino  sensors.ino
src/: armbot.cpp  armbot.h  armbot.ino
